fix: update transfer token page refactor funding accounts info

--- a/content/08-cardano-sidechains/03-example-evm-sidechains/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/01-network-details.mdx
@@ -3,7 +3,10 @@ title: Network details
 metaTitle: Network details
 ---
 
-This page provides basic reference to Cardano EVM sidechain networks including RPC, chain ID, and public utilities. The Cardano EVM sidechain testnet, Atago, is intended for testing purposes. Building on the testnet allows developers to deploy and test applications without risking real assets and value.
+The Example EVM Sidechain testnet enviorment consistists of 2 networks:
+
+1. Takao: The mainchain Cardano test network.
+2. Atago: The sidechain EVM test network.
 
 ## Networks
 
