fix: implement feedback

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/00-testnet-disclaimer.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/00-testnet-disclaimer.mdx
@@ -11,7 +11,7 @@ You also acknowledge and agree to have an adequate understanding of the risks
 associated with use of the example EVM sidechain testnet and that all information and
 materials published, distributed or otherwise made available on Cardano Docs is
 provided for non-commercial, personal use, and testing purposes only. This includes
-FUEL tokens which have no economic value and are provided only for the purpose of
+test currency tokens which have no economic value and are provided only for the purpose of
 testing on the example EVM sidechain testnet.  
 
 Example EVM sidechain testnet is available on an ‘AS IS’ and ‘AS AVAILABLE’ basis,
