--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -3,17 +3,17 @@ title: Network details
 metaTitle: Network details
 ---
 
-The Example EVM Sidechain testnet enviorment consistists of 2 networks:
+The Example EVM sidechain testnet enviorment consistists of two networks:
 
-1. EVM Sidechain Testnet (sidechain, SC)
-2. Cardano Testnet (mainchain, MN)
+1. EVM sidechain testnet (sidechain, SC)
+2. Cardano testnet (mainchain, MN)
 
 ## Networks
 
 | Name | Network Type | Chain ID  | Consensus | Token | Model
 | --- | :---: | :---: | :---: | :---: | :---: |
-| EVM Sidechain Testnet | TestNet | 78 | OBFT | Sidechain Token (`SC_Token`) | Account Model |
-| Cardano Testnet | TestNet | 7 | POS | Test ADA (`tADA`) | eUTXO |
+| EVM sidechain testnet | Testnet | 78 | OBFT | Sidechain token (`SC_Token`) | Account Model |
+| Cardano testnet | Testnet | 7 | POS | Test ada | EUTXO |
 
 ## Utilities
 
