--- a/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -8,13 +8,13 @@ metaTitle: Create and fund accounts
 1. Ability to make an HTTP request.
 2. Optional: Download `evm-sc-cli` binary and add to your path: https://github.com/input-output-hk/sidechains-tooling
 
-# How to fund your mainchain account with test ADA tokens
+# How to fund your main chain account with test ada tokens
 
-In this tutorial, you will learn how to claim test Ada tokens on the mainchain testnet.
+In this tutorial, you will learn how to claim test ada tokens on the main chain testnet.
 
 ## Generating keys
 
-To generate keys for the cardano testnet you need the `cardano-cli` [binary](https://github.com/input-output-hk/cardano-node/releases/)
+To generate keys for the Cardano testnet you need the `cardano-cli` [binary](https://github.com/input-output-hk/cardano-node/releases/)
 Open a shell and run the following commands:
 
 ```shell
@@ -35,11 +35,11 @@ cardano-cli address build \
 
 These steps are based on the [cardano developers page](https://developers.cardano.org/docs/stake-pool-course/handbook/keys-addresses/).
 
-Request test ADA using the web-app: https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet
+Request test ada using the web-app: https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet
 
 # How to fund your sidechain account with test SC_token
 
-Create a sidechain account using a compatible Web3 connected to the Atago network (MetaMask), 
+Create a sidechain account using a compatible Web3 connected to the EVM sidechain test network (MetaMask), 
 1a. or using `evm-sc-cli`: https://github.com/input-output-hk/sidechains-tooling
 
 ```shell
