--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -23,7 +23,7 @@ In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you
 
 ![remix-menu](https://user-images.githubusercontent.com/10556209/200480707-ec8b8e69-6cdc-498b-b315-c029fbc2a564.png)
 
-If the Solidity compiler and deploy plugins are not activated, you can search and activate them using the plugin manager [5] located in the bottom-left of the screen.
+If the Solidity compiler and deploy plugins are not activated, you can search and activate them using the plugin manager [5] located in the bottom left of the screen.
 
 ![remix-plugin](https://user-images.githubusercontent.com/10556209/202550289-1cd1e25a-b1c9-4e66-9600-fad710126c8d.png)
 
@@ -72,7 +72,7 @@ When the contract is compiled, you can view contract ABI, Bytecode, and more inf
 
 ![compile-remix](https://user-images.githubusercontent.com/10556209/200576656-dad4c35d-02f7-40ce-8bd1-3e9f8497e302.png)
 
-- Then, select the `Deploy and run transactions` plugin > select 'Deploy' [1] and confirm any MetaMask prompts to sign the transaction. If the deployment is successful, the Remix console should return a green checkmark with expendable details [2]. The 'Deployed Contracts' panel will contain the contract address and generate a contract interface to test functions [3].
+- Then, select the `Deploy and run transactions` plugin > select 'Deploy' [1] and confirm any MetaMask prompts to sign the transaction. If the deployment is successful, the Remix console should return a green checkmark with expandable details [2]. The 'Deployed Contracts' panel will contain the contract address and generate a contract interface to test functions [3].
 
 ![deploy-remix](https://user-images.githubusercontent.com/10556209/201174327-6be015b2-9003-4f3c-8d70-f376dd1a3a9a.png)
 
@@ -110,7 +110,7 @@ $ npm -v
 
 ## Step 01 - Create a Hardhat project
 
-For this tutorial we will create a new NPM project and initilize `npx hardhat` to bootstrap a sample JavaScript project that we will configure to deploy to the sidechain testnet.
+This tutorial will create a new NPM project and initialize `npx hardhat` to bootstrap a sample JavaScript project and configure it to deploy to the sidechain testnet.
 
 - Create a new project:
 
