--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-sidechain-token.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-sidechain-token.mdx
@@ -9,13 +9,13 @@ metaTitle: SC_Token and faucet
 
 ## What is test SC_Token and how can I claim it via a faucet?
 
-**Test SC_Token**, or 'Sidechain Testnet Tokens' SC_Token, is the native token of the example EVM sidechain testnet. Test SC_Token carries no real-world value.
+**Test SC_Token**, or 'Sidechain Testnet Token' SC_Token, is the native token of the example EVM sidechain testnet. Test SC_Token carries no real-world value.
 
-IO Global maintains a faucet at <PENDING_URL> for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the Atago testnet. You can claim one test SC_Token every 24 hours. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
+IO Global maintains a faucet at <PENDING_URL> for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You can claim one test SC_Token every 24 hours. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
 
 ## What is gas?
 
-**Gas** refers to the computational cost necessary to successfully conduct a transaction on the sidechain network. This gas is detonated from a small fraction of SC_Token when conducting a transaction, deploying a smart contract, or writing to a smart contract.  
+**Gas** refers to the computational cost necessary to successfully conduct a transaction on the sidechain network. This gas is denoted from a small fraction of SC_Token when conducting a transaction, deploying a smart contract, or writing to a smart contract.
 
   
 <sup>1</sup> Temporary name  
