--- a/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
@@ -3,7 +3,7 @@ title: Working with MetaMask
 metaTitle: Working with MetaMask
 ---
 
->*MetaMask compatibility with the sidechain is officially tested with Google Chrome and Brave web browsers.*
+>*The team has tested MetaMask compatibility with the sidechain using Google Chrome and Brave web browsers.*
 
 ## Install MetaMask
 
@@ -22,7 +22,7 @@ Back up your wallet seed phrase and store it in a safe place.
 
 Settings > Networks > Add Network > Input the following settings and save.
 
-- Network Name: `EVM Sidechain Tesnet`
+- Network Name: `EVM sidechain Tesnet`
 - New RPC URL: `<PENDING_URL>`
 - Chain ID: `78`
 - Currency Symbol: `SC_Token`<sup>1</sup>
@@ -35,6 +35,6 @@ Now you can select the Cardano EVM sidechain network from MetaMask:
 ## Known issues
 
 - If the sidechain network was added correctly, but MetaMask does not send transactions, update balance, or simply not interact with the chain, then try to [Reset your MetaMask account](https://metamask.zendesk.com/hc/en-us/articles/360015488891-How-to-reset-an-account).
-- MetaMask compatibility with the sidechain is officially tested with Google Chrome and Brave web browsers. To avoid browser compatbility issues, use Google Chrome or Brave.
+- The team has tested MetaMask compatibility with the sidechain using Google Chrome and Brave web browsers. To avoid browser compatibility issues, use the same browsers.
   
 <sup>1</sup> Temporary name  
