fix: implement feedback

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -15,10 +15,14 @@ The Example EVM sidechain testnet enviorment consistists of two networks:
 | EVM sidechain testnet | Testnet | 78 | OBFT | Sidechain token (`SC_Token`) | Account Model |
 | Cardano testnet | Testnet | 7 | POS | Test ada | EUTXO |
 
-## Utilities
+## Network Utilities
 
 |  |  | 
 | --- | :---: |
 | RPC | <PENDING_URL> |
 | Block Explorer | <PENDING_URL>   |
 | Faucet | <PENDING_URL>   |
+
+## Network Notifications
+
+Announcements for new releases, network disruptions, and other updates will be announced in the `#ask-sidechains` channel in the [IO Technical Communities Discord](https://discord.com/invite/inputoutput).
