minor tweak to capitalization

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/00-testnet-disclaimer.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/00-testnet-disclaimer.mdx
@@ -22,7 +22,7 @@ directors, employees, contractors, service providers or agents (the parties invo
 accepts any responsibility or liability to you or any third parties in relation to any materials
 or information accessed via the example EVM sidechain testnet.  
 
-You acknowledge and agree that the parties Involved are not responsible for any damage
+You acknowledge and agree that the parties involved are not responsible for any damage
 to your computer systems, loss of data, or any other loss or damage resulting (directly or
 indirectly) from use of the example EVM sidechain testnet.  
 
