spelling and formatting edits

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -3,19 +3,19 @@ title: Network details
 metaTitle: Network details
 ---
 
-The Example EVM sidechain testnet enviorment consistists of two networks:
+The Example EVM sidechain testnet environment consists of two networks:
 
 1. EVM sidechain testnet (sidechain, SC)
-2. Cardano testnet (mainchain, MN)
+2. Cardano testnet (main chain, MN)
 
 ## Networks
 
 | Name | Network Type | Chain ID  | Consensus | Token | Model
 | --- | :---: | :---: | :---: | :---: | :---: |
-| EVM sidechain testnet | Testnet | 78 | OBFT | Sidechain token (`SC_Token`) | Account Model |
+| EVM sidechain testnet | Testnet | 78 | OBFT | Sidechain token (`SC_Token`) | Account model |
 | Cardano testnet | Testnet | 7 | POS | Test ada | EUTXO |
 
-## Network Utilities
+## Network utilities
 
 |  |  | 
 | --- | :---: |
@@ -23,6 +23,6 @@ The Example EVM sidechain testnet enviorment consistists of two networks:
 | Block Explorer | <PENDING_URL>   |
 | Faucet | <PENDING_URL>   |
 
-## Network Notifications
+## Network notifications
 
 Announcements for new releases, network disruptions, and other updates will be announced in the `#ask-sidechains` channel in the [IO Technical Communities Discord](https://discord.com/invite/inputoutput).
