Punctuation & link replacement
@stevanlohja I replaced the dev portal link with our node one. The node tutorial is maintained and updated by our devs.

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -6,7 +6,7 @@ metaTitle: Create and fund accounts
 ### Prerequisites:
 
 1. Ability to make an HTTP request.
-2. Optional: Download `evm-sc-cli` binary and add to your path: https://github.com/input-output-hk/sidechains-tooling
+2. Optional: download `evm-sc-cli` binary and add to your path: https://github.com/input-output-hk/sidechains-tooling.
 
 # How to fund your main chain account with test ada tokens
 
@@ -14,7 +14,7 @@ In this tutorial, you will learn how to claim test ada tokens on the main chain 
 
 ## Generating keys
 
-To generate keys for the Cardano testnet you need the `cardano-cli` [binary](https://github.com/input-output-hk/cardano-node/releases/)
+To generate keys for the Cardano testnet you need the `cardano-cli` [binary](https://github.com/input-output-hk/cardano-node/releases/).
 Open a shell and run the following commands:
 
 ```shell
@@ -33,9 +33,9 @@ cardano-cli address build \
  export MC_ADDR=$(cat payment.addr)
 ```
 
-These steps are based on the [cardano developers page](https://developers.cardano.org/docs/stake-pool-course/handbook/keys-addresses/).
+These steps are based on this [keys and adresses creation tutorial](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/3_keys_and_addresses.md).
 
-Request test ada using the web-app: https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet
+Request test ada using [the web-app](https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet).
 
 # How to fund your sidechain account with test SC_token
 
